--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
 					<span>Nosotros</span>
 					<ul class="no-bullet">
 						<li><a href="{{ site.url }}/n-oikos.html">Oikos</a></li>
-						<!--<li><a href="{{ site.url }}/n-miembros.html">Miembros</a></li>-->
+						<li><a href="{{ site.url }}/n-miembros.html">Miembros</a></li>
 						<li><a href="{{ site.url }}/n-jd.html">Junta Directiva</a></li>
 						<li><a href="{{ site.url }}/n-honorarios.html">Miembros Honorarios</a></li>
 					</ul>
