--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -726,6 +726,13 @@ article{
   margin-right: auto;
 }
 
+.big-img{
+  width: 80%;
+  height:80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .post-content{
   margin: auto;
   padding: 2em 2em 2em 2em;
