--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,7 +39,7 @@
 			<div class="foo-enter">
 				<label for="">Buscar</label>
 				<div class="enter search">
-					<form method="get" action="http://www.google.com/search">
+					<form method="get" action="https://www.google.com/search">
 						<input type="text" name="q" placeholder="Busco..." class="in corners">
 						<div class="mask">
 							<input type="submit" value="Google Search" />
@@ -53,6 +53,6 @@
 		</div>
 		<div class="toe">
 			Grupo Excursionista Oikos - Universidad Simón Bolívar, Casa del Estudiante, PB<br>
-			<span>Diseño y desarrollo por <a href="http://lual.com.ve">Lual</a></span>
+			<span>Diseño y desarrollo por <a href="https://lual.com.ve">Lual</a></span>
 		</div>
 	</footer>
