--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /* ===== BASE ===== */
 @import url(icons.css);
-@import url(http://fonts.googleapis.com/css?family=Raleway:700|Open+Sans:400italic,700italic,400,700);
+@import url(https://fonts.googleapis.com/css?family=Raleway:700|Open+Sans:400italic,700italic,400,700);
 @font-face {
   font-family: 'Static';
   src: url("../fonts/static-webfont.eot");
@@ -390,7 +390,7 @@ footer .toe span a:hover {
 .hero {
   min-height: 480px;
   max-height: 780px;
-  background: url(http://source.unsplash.com/category/nature) no-repeat center center fixed;
+  background: url(https://source.unsplash.com/category/nature) no-repeat center center fixed;
   background-size: cover;
   display: flex;
   justify-content: center;
