--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,20 +2,20 @@
 		<div class="wrap">
 			<div class="foo-logo">
 				<div>
-					<a href="{{ site.url }}/index.html"><img src="{{ site.url }}/assets/img/logo-footer.png" alt=""></a>
+					<a href="{{ site.baseurl }}/index.html"><img src="{{ site.baseurl }}/assets/img/logo-footer.png" alt=""></a>
 				</div>
 			</div>
 			<div class="foo-links">
 				<div class="foo-links-oikos">
 					<h3>Oikos</h3>
 					<ul class="no-bullet">
-						<li><a href="{{ site.url }}/index.html">Principal</a></li>
-						<li><a href="{{ site.url }}/n-oikos.html">Oikos</a></li>
-						<li><a href="{{ site.url }}/n-jd.html">Junta Directiva</a></li>
-						<li><a href="{{ site.url }}/n-honorarios.html">Miembros Honorarios</a></li>
-						<li><a href="{{ site.url }}/contacto.html">Contacto</a></li>
-						<li><a href="{{ site.url }}/expediciones.html">Expediciones</a></li>
-						<li><a href="{{ site.url }}/blog.html">Blog</a></li>
+						<li><a href="{{ site.baseurl }}/index.html">Principal</a></li>
+						<li><a href="{{ site.baseurl }}/n-oikos.html">Oikos</a></li>
+						<li><a href="{{ site.baseurl }}/n-jd.html">Junta Directiva</a></li>
+						<li><a href="{{ site.baseurl }}/n-honorarios.html">Miembros Honorarios</a></li>
+						<li><a href="{{ site.baseurl }}/contacto.html">Contacto</a></li>
+						<li><a href="{{ site.baseurl }}/expediciones.html">Expediciones</a></li>
+						<li><a href="{{ site.baseurl }}/blog.html">Blog</a></li>
 					</ul>
 				</div>
 				<div class="foo-links-síguenos">
@@ -30,9 +30,9 @@
 				<div class="foo-links-cursos">
 					<h3>cursos</h3>
 					<ul class="no-bullet">
-						<li><a href="{{ site.url }}/c-baja.html">Baja y media montaña</a></li>
-						<li><a href="{{ site.url }}/c-roca.html">Escalada en roca</a></li>
-						<li><a href="{{ site.url }}/c-alta.html">Alta montaña</a></li>
+						<li><a href="{{ site.baseurl }}/c-baja.html">Baja y media montaña</a></li>
+						<li><a href="{{ site.baseurl }}/c-roca.html">Escalada en roca</a></li>
+						<li><a href="{{ site.baseurl }}/c-alta.html">Alta montaña</a></li>
 					</ul>
 				</div>
 			</div>
