--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header>
 		<div class="header-bar">
 			<div class="header-logo">
-				<a href="{{ site.url }}/index.html">
-					<img src="{{ site.url }}/assets/img/logo.png" alt="">
+				<a href="{{ site.baseurl }}/index.html">
+					<img src="{{ site.baseurl }}/assets/img/logo.png" alt="">
 				</a>
 			</div>
 			<div class="menu-trigger blue">
@@ -11,27 +11,27 @@
 		</div><!--
 		--><nav class="blue">
 			<ul class="no-bullet">
-				<li><a href="{{ site.url }}/index.html">Principal</a></li>
+				<li><a href="{{ site.baseurl }}/index.html">Principal</a></li>
 				<li>
 					<span>Nosotros</span>
 					<ul class="no-bullet">
-						<li><a href="{{ site.url }}/n-oikos.html">Oikos</a></li>
-						<li><a href="{{ site.url }}/n-miembros.html">Miembros</a></li>
-						<li><a href="{{ site.url }}/n-jd.html">Junta Directiva</a></li>
-						<li><a href="{{ site.url }}/n-honorarios.html">Miembros Honorarios</a></li>
+						<li><a href="{{ site.baseurl }}/n-oikos.html">Oikos</a></li>
+						<li><a href="{{ site.baseurl }}/n-miembros.html">Miembros</a></li>
+						<li><a href="{{ site.baseurl }}/n-jd.html">Junta Directiva</a></li>
+						<li><a href="{{ site.baseurl }}/n-honorarios.html">Miembros Honorarios</a></li>
 					</ul>
 				</li>
 				<li>
-					<a href="{{ site.url }}/cursos.html">Cursos</a>
+					<a href="{{ site.baseurl }}/cursos.html">Cursos</a>
 					<ul class="no-bullet">
-						<li><a href="{{ site.url }}/c-baja.html">Baja y media montaña</a></li>
-						<li><a href="{{ site.url }}/c-roca.html">Escalada en roca</a></li>
-						<li><a href="{{ site.url }}/c-alta">Alta montaña</a></li>
+						<li><a href="{{ site.baseurl }}/c-baja.html">Baja y media montaña</a></li>
+						<li><a href="{{ site.baseurl }}/c-roca.html">Escalada en roca</a></li>
+						<li><a href="{{ site.baseurl }}/c-alta">Alta montaña</a></li>
 					</ul>
 				</li>
-				<li><a href="{{ site.url }}/contacto.html">Contacto</a></li>
-				<li><a href="{{ site.url }}/expediciones.html">Expediciones</a></li>
-				<li><a href="{{ site.url }}/blog.html">Blog</a></li>
+				<li><a href="{{ site.baseurl }}/contacto.html">Contacto</a></li>
+				<li><a href="{{ site.baseurl }}/expediciones.html">Expediciones</a></li>
+				<li><a href="{{ site.baseurl }}/blog.html">Blog</a></li>
 			</ul>
 		</nav>
 	</header>
